modify new header

--- a/styles.css
+++ b/styles.css
@@ -1,529 +1,44 @@
-:root{
-  --btn-color-1: #1187ea;
-  --btn-color-hover: #55bcff;
-}
-
 *{
     font-family: 'Work Sans', sans-serif;
-
-}
-
-html, body{
-  overflow-x: hidden;
 }
 
 body{
-  margin: 0;
-  background-color: #115588;
-  padding:0;
+    background: #28aade;
+    background: -webkit-linear-gradient(90deg, rgba(40, 170, 222, 1) 0%, rgba(140, 198, 219, 1) 50%, rgba(40, 170, 222, 1) 100%);
+    background: -moz-linear-gradient(90deg, rgba(40, 170, 222, 1) 0%, rgba(140, 198, 219, 1) 50%, rgba(40, 170, 222, 1) 100%);
+    background: linear-gradient(90deg, rgba(40, 170, 222, 1) 0%, rgba(140, 198, 219, 1) 50%, rgba(40, 170, 222, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#28AADE", endColorstr="#28AADE", GradientType=1);
 }
 
-#webpage-wrapper{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20vw;
 }
 
 .title{
-    padding: 10px;  
-}
-
-.subtitle-title{
-    margin-top: -20px;
-}
-
-.grid{
     display: flex;
     align-items: center;
-    justify-content: center;
-    margin-bottom: 40px;
+    gap: 12px;
 }
 
-.block{
-  display: flex;
-  background-color: #3365cc;
-  padding: 40px 20px;
-  margin: auto 15px;
-  border-radius: 39px;
-}
-
-
-
-.vid{
-  width: 700px;
-  height: 500px;
-}
-
-.vid-block{
-  padding-top: 10px;
-  padding-bottom: 50px;
-  padding-left: 30px;
-  padding-right: 30px;
-  display: flex;
-  width: 100%;
-  margin-right: 20px;
-  margin-left: 20px;
-  flex-direction: column; 
-  justify-content: center;
-  align-items: center;
-  border-radius: 20px;
-  background-color: #3365cc;
-}
-
-
-
-.table-container{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 20px;
-  margin-left: -300px;
-  margin-right: -300px;
-}
-
-table{
-  max-width: 700px;
-  width: 100%;
-}
-
-header {
-  position: fixed;
-  top: 0;
-  min-height: 75px;
-  padding: 0px 20px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #3388cc;
-  width: 100%;
-}
-
-#hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  height: 200px;
-  background-color: #3377aa;
-  margin-top: 200px;
-  margin-bottom: 40px;
-  margin-left: 100px;
-  margin-right: 100px;
-  padding: 70px 50px;
-  border-radius: 100px;
-}
-
-#hero > h2 {
-  margin-top: 30px;
-  margin-bottom: -10px;
-  word-wrap: break-word;
-}
-
-#hero input[type='email'] {
-  max-width: 275px;
-  width: 100%;
-  border-radius: 10px;
-  border: none;
-  background-color: powderblue;
-  padding: 5px;
-}
-
-#hero input[type='submit'] {
-  max-width: 150px;
-  width: 100%;
-  height: 30px;
-  margin: 15px 0;
-  border: 0;
-  background-color: var(--btn-color-1);
-  border-radius: 20px;
-}
-
-#hero input[type='submit']:hover {
-  background-color: var(--btn-color-hover);
-  transition: background-color 1s;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-#hero input[type='submit']:active {
-  background-color: var(--btn-color-hover);
-  opacity: 0.5;
-  transition: background-color 1s;
-  box-shadow:  0 0 30px rgba(0, 0, 0, 0.8);
-}
-
-.header-flex{
+nav ul{
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    padding: 10px;
-    margin-top: -35;
+    gap: 8vw;
+    list-style-type: none;
 }
 
-#header-img{
-    width: 80px;
-    border-radius: 43px;
+nav ul a{
+    text-decoration: none;
+    color: #000;
 }
 
-nav > ul {
-  width: 35vw;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+main{
+    visibility: hidden;
 }
 
-li {
-  list-style: none;
-}
-
-.img-features{
+.img-container img{
     width: 300px;
-    height: 200px;
 }
-
-.img-container{
-    padding-left: 15px;
-    padding-right:15px;
-}
-
-table {
-    border-collapse: collapse;
-    width: 50%;
-    margin: 20px;
-}
-th, td {
-    border: 1px solid black;
-    padding: 8px;
-    text-align: left;
-}
-caption {
-    caption-side: top;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-#pricing {
-  margin-top: 60px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-a {
-  color: #000;
-  text-decoration: none;
-}
-
-.product {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  width: calc(100% / 3);
-  margin: 10px;
-  border: 1px solid #000;
-  background-color: #0155fe;
-  border-radius: 100px;
-  overflow: hidden;
-}
-
-.product > .level {
-  background-color: #1165;
-  color: black;
-  padding: 15px 0;
-  width: 100%;
-  text-transform: uppercase;
-  font-weight: 700;
-  border-radius: 100px;
-}
-
-.product > h2 {
-  margin-top: 15px;
-}
-
-.product > ol {
-  margin: 15px 0;
-}
-
-.product > ol > li {
-  padding: 5px 0;
-}
-
-.product > button {
-  border: 0;
-  margin: 15px 0;
-  background-color: var(--btn-color-1);
-  border-radius: 20px;
-  font-weight: 400;
-}
-
-.product > button:hover {
-  background-color: var(--btn-color-hover);
-  transition: background-color 1s;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-.product > button:active {
-  opacity: 0.5;
-  box-shadow:  0 0 30px rgba(0, 0, 0, 0.8);
-}
-
-footer {
-  margin-top: 30px;
-  background-color: #3388cc;
-  padding-top: 20px;
-  width: 100%;
-}
-
-footer > ul {
-  display: flex;
-  justify-content: flex-end;
-}
-
-footer > ul > li {
-  padding: 0 10px;
-  margin-left: 10px;
-}
-
-footer > span {
-  margin-top: 5px;
-  display: flex;
-  justify-content: flex-end;
-  font-size: 0.9em;
-  color: #444;
-  text-align: center;
-}
-
-@media(max-width: 900px){
-  .vid{
-    width: 650px;
-  }
-}
-
-@media (max-width: 852px) {
-  #pricing {
-    flex-direction: column;
-  }
-  .product {
-    max-width: 300px;
-    width: 100%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-  }
-
-  .vid{
-    width: 650px;
-  }
-
-  .vid-block{
-    width: 100%;
-    margin-left: 200px;
-    margin-right: 200px;
-  }
-
-  .block{
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 620px;
-  }
-
-  .footer > span{
-    flex-direction: column;
-    visibility: hidden;
-  }
-
-  .footer > ul{
-    display: flex;
-    flex-direction: column;
-    visibility: hidden;
-  }
-}
-
-@media(max-width: 730px){
-  .vid{
-    width: 500px;
-    height: 300px;
-    margin-right: 30px;
-    margin-left: 30px;
-  }
-  table{
-    font-size: 12px;
-    max-width: 500px;
-  }
-
-  #nav-bar > ul{
-    visibility: hidden;
-  }
-
-}
-
-
-@media(max-width: 700px){
-  p{
-    font-size: 14px;
-  }
-
-  .block{
-    max-width: 470px;
-  }
-
-  .vid-block{
-    width: 100%;
-  }
-
-  .h1{
-    font-size: 16px;
-  }
-
-  #hero{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    height: 350px;
-    margin-top: 125px;
-  }
-
-  #hero > h3 {
-    font-size: 16px;
-  }
-
-  nav{
-    width: 0;
-  }
-
-  header{
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media(max-width: 520px){
-  .vid-block{
-    width: 100%;
-    margin-right: 0;
-    margin-left: 0;
-    border-radius: 0;
-  }
-    .vid{
-    width: 350px;
-    height: 235px;
-  }
- 
-  .block{
-    max-width: 375px;
-  }
-
-  .desc{
-    font-size: 8px;
-  }
-
-  
-  table{
-    max-width: 300px;
-  }
-
-  header{
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .subtitle-title{
-    font-size: 12px;
-  }
-
-  .header-title{
-    font-size: 25px;
-  }
-
-  #hero{
-    max-height: 385px;
-    width: 220px;
-  }
-
-  #header-img{
-    width: 62px;
-  }
-  nav{
-    width: 0;
-  }
-}
-
-@media(max-width: 448px){
-  #hero > h3{
-    font-size: 14px;
-    font-weight: 600;
-  }
-
-  .footer > span{
-    font-size: 3px;
-  }
-
-  .footer > ul{
-    font-size: 3px;
-  }
-}
-
-@media(max-width: 428px){
-  #hero{
-    width: 175px;
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .img-features{
-    max-width: 170px;
-  }
-
-  .block{
-    max-width: 200px;
-    width: 100%;
-  }
-
-  .vid-block{
-    max-width: 380px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-left: 40px;
-    margin-right: 20px;
-  }
-
-  .vid-caption > h1{
-    font-size: 20px;
-  }
-
-  .vid-capition > p{
-    font-size: 10px;
-    text-align: center;
-  }
-
-  .table-container > h1{
-    font-size: 15px;
-  }
-}
-
-@media(max-width: 400px){
-
-  .vid-block{
-    max-width: 220px;
-    width: 100%;
-    margin-left:0;
-    margin-right: 0;
-  }
-
-  .vid{
-    max-width: 170px;
-    width: 100%;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-}
-
-
-
-
