--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ header{
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    gap: 20vw;
+    gap: 15.5vw;
 }
 
 .title{
@@ -26,7 +26,7 @@ header{
 
 nav ul{
     display: flex;
-    gap: 8vw;
+    gap: 5vw;
     list-style-type: none;
 }
 
@@ -36,8 +36,70 @@ nav ul a{
 }
 
 main{
-    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 75px;
+    margin-top: 75px;
 }
+
+.hero-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+#hero{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background: #3399dd;
+    width: 65vw;
+    text-align: center;
+    padding: 4.25% 5%;
+    border-radius: 50%;
+}
+
+#hero h3:first-child{
+    margin-bottom: 10px;
+}
+
+#hero form{
+    display: flex;
+    gap: 8px;
+}
+
+#hero form #email{
+    background-color: #28aade;
+    border: none;
+    padding: 5px;
+    font-size: 1em;
+    border-radius: 10px;
+    width: 20vw;
+}
+
+#hero form #email:focus{
+    outline: none;
+}
+
+#hero form #submit{
+    border: none;
+    background-color: #228db8;
+    font-size: 1em;
+    padding: 5px 12px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#hero form #submit:hover{
+    color: #228db8;
+    background-color: black;
+}
+
+#hero form #submit:active{
+    opacity: 0.8;
+}
+
 
 .img-container img{
     width: 300px;
