--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body{
     background: -moz-linear-gradient(90deg, rgba(40, 170, 222, 1) 0%, rgba(140, 198, 219, 1) 50%, rgba(40, 170, 222, 1) 100%);
     background: linear-gradient(90deg, rgba(40, 170, 222, 1) 0%, rgba(140, 198, 219, 1) 50%, rgba(40, 170, 222, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#28AADE", endColorstr="#28AADE", GradientType=1);
+    padding: 0;
 }
 
 header{
@@ -100,7 +101,58 @@ main{
     opacity: 0.8;
 }
 
+#Features{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+#Features .grid{
+    background: #0978a3;
+    padding: 2% 3.5%;
+    border-radius: 12%;
+}
+
+#Features .grid .block{
+    display: flex;
+    gap: 30px;
+    width: 82.5vw;
+    align-items: center;
+    justify-content: space-around;
+}
 
 .img-container img{
     width: 300px;
+    height: 200px;
+    border-radius: 12%;
+}
+
+#Video{
+    width: 100vw;
+    background: #0978a3;
+    margin-left: -8px;
+    padding-top: 2.5%;
+    padding-bottom: 3%;
+}
+
+#Video .grid{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vid-block{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.vid-container iframe{
+    width: 750px;
+    height: 425px;
+    border-radius: 2%;
 }
