--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body{
     background: linear-gradient(90deg, rgba(40, 170, 222, 1) 0%, rgba(140, 198, 219, 1) 50%, rgba(40, 170, 222, 1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#28AADE", endColorstr="#28AADE", GradientType=1);
     padding: 0;
+    overflow-x: hidden;
 }
 
 header{
@@ -222,4 +223,36 @@ caption {
 
 #Pricing .product .btn:active{
     opacity: 0.8;
+}
+
+footer{
+    background: #0978a3;
+    margin-left: -7px;
+    width: 100vw;
+    margin-bottom: -8px;
+    padding: 2% 0;
+}
+
+footer ul{
+    display: flex;
+    list-style: none;
+    gap: 20px;
+}
+
+footer ul a{
+    text-decoration: none;
+    color: #888;
+    cursor: pointer;
+}
+
+footer ul a:hover{
+    opacity: 0.85;
+}
+
+footer ul a:active{
+    opacity: 0.75;
+}
+
+footer span{
+    margin-left: 40px;
 }
